<resources>
    <string name="app_name">Rush</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm new Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="str_login">Log in</string>
    <string name="str_create_account">Create an account</string>
    <string name="str_has_forgotPass">Have you forgotten your password?</string>
    <string name="str_signup_with">Sign up with</string>
    <string name="str_facebook">Facebook</string>
    <string name="str_google">Google</string>
    <string name="str_pay_method">Payment Methods</string>
    <string name="str_Number">Number</string>
    <string name="str_expiration">Expiration</string>
    <string name="str_headline">Card Holder Name</string>
    <string name="str_cvv">CVV</string>
    <string name="str_country">Country</string>
    <string name="str_city">City</string>
    <string name="str_card">Card</string>
    <string name="str_save">Save</string>
    <string name="str_save_card">Saved Cards</string>
    <string name="str_write_rush">Write the email of your rush account</string>
    <string name="str_submit">Submit</string>
    <string name="str_fullname">Full name</string>
    <string name="str_password">Password</string>
    <string name="str_hint_password">Old Password</string>
    <string name="str_email">Email</string>
    <string name="str_phone">Phone number</string>
    <string name="str_change_photo">Change photo</string>

    /****************************************************************User details.************\
    <string name="str_pickup_location">Pickup Location</string>
    <string name="str_drop_location">Drop Location</string>
    <string name="str_record_details">Record Details</string>
    <string name="str_order_details">Order detail</string>
    <string name="str_add_comments">Add Comment</string>
    <string name="str_comment">Comment</string>
    <string name="error_empty_comment">Please enter comment</string>


    <string name="error_empty_email">Email address cannot be empty.</string>
    <string name="error_empty_username">Username cannot be empty.</string>
    <string name="error_empty_name">Fullname  cannot be empty.</string>
    <string name="error_empty_password">Password cannot be empty.</string>
    <string name="error_empty_Mobile">Mobile number cannot be empty.</string>
    <string name="error_title_invalid_email">Invalid Email</string>
    <string name="error_title_invalid_password">Password must have minimum 6 characters.</string>
    <string name="error_title_invalid_Mobile">Invalid Mobile Number</string>
    <string name="error_title_invalid_profile">Invalid Profile Pic</string>
    <string name="error_title_invalid_card">Invalid Card </string>
    <string name="error_pass_not_matched">Password not matched.</string>
    <string name="str_open_Camera">Open Camera</string>
    <string name="str_open_Gallery">Open Gallery</string>
    <string name="str_profile_pic">Select Profile Photo"</string>
    <string name="str_terms_condition">Select Term and Condition</string>

    Nombre del titular de la tarjeta
    <string name="error_invalid_card_holdername">Fill Card Holder Name </string>
    <string name="error_invalid_card">Invalid Card Number </string>
    <string name="str_empty_expiry">Expiration date should not be empty</string>
    <string name="str_invalid_cvv">Cvv is Invalid</string>
    <string name="str_empty_city">City is blank</string>
    <string name="str_empty_country">Country is blank</string>
    <string name="str_empty_headline">HeadLine is blank</string>
    <string name="str_fb_id">1823860091226577</string>
    <string name="str_verify_email">Please verify your email</string>
    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="title_activity_book_service">BookServiceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="str_verify_text">A confirmation email has been sent to your email id,Please confirm that to continue </string>

    <string name="str_notification">Notifications</string>

    <string name="str_menu_order">Order</string>
    <string name="str_menu_payment_method">Payment Methods</string>
    <string name="str_menu_record">Record</string>
    <string name="str_menu_schedule">Scheduled</string>
    <string name="str_menu_fav">My Favourite</string>
    <string name="str_settings">Settings</string>
    <string name="str_menu_logout">Sign Out</string>
    <string name="str_select_currency">Select currency</string>


    <string name="str_link_card">Please link a card to your account.</string>

    <string name="str_no_changes">No change selected</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="map_debug_key">AIzaSyDwSOxeJ0GIxeqK-GPfBhOv8hFH-ssgFfE</string>-->
    <string name="map_debug_key">AIzaSyDwSOxeJ0GIxeqK-GPfBhOv8hFH-ssgFfE</string>
    <string name="map_key_release">AIzaSyBXEHIlXNyrt0D9sqijDE4XGyx4TLdWDKs</string>

    <string name="str_reservation">Reservation</string>
    <string name="str_now">Now</string>

    <string name="str_hint_start">Indicate the starting point</string>

    <string name="str_hint_end">Indicate destination point</string>

    <string name="str_make_order">Make an order</string>
    <string name="str_value_estimate">Estimated Cost</string>
    <string name="str_value_time">Estimated Time</string>
    <string name="str_fav_message">Are you sure ,you want to mark this address to Favourite?</string>
    <string name="str_delete_Card">Are you sure ,you want to delete this card?</string>
    <string name="str_fav_remove">Are you sure ,you want to remove this address from Favourite?</string>
    <string name="str_marking_fav">Marking Favourite..</string>
    <string name="str_default_Card">Are you sure ,you want to mark this card default?</string>


    <string name="progress_loading">Loading..</string>
    <string name="progress_estimate">Estimating Cost..</string>
    <string name="title_activity_place_autocomplete">PlaceAutocomplete</string>
    <string name="str_record">Record</string>
    <string name="str_scheduled">Scheduled order</string>

    <string name="str_another_des">Add another destination</string>

    <string name="str_pay_now">Pay Now</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_ok">Ok</string>
    <string name="str_delete">Delete</string>
    <string name="str_fav">Favourite</string>
    <string name="str_mark_default">Mark Default</string>

    <string name="str_favourites">Favourite</string>
    <string name="str_estimate_cost">Estimate Cost</string>
    <string name="str_select_card">Please select card</string>
    <string name="str_confirm_order">Confirm Order</string>
    <string name="str_permission_denied">Permission denied.</string>

    <string name="str_internet_error"></string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_edit">edit</string>
    <string name="str_add_card">Add Card</string>
    <string name="str_frequent_address">Frequently used address</string>
    <string name="str_receipt">Receipt</string>
    <string name="str_something_wrong">Something went wrong.</string>
    <string name="str_invalid_credentials">Invalid credentials</string>
    <string name="str_upcoming">Upcoming order</string>
    <string name="str_menu_upcoming">Upcoming</string>
    <string name="str_home">Home</string>
    <string name="str_select_reservation">Please select reservation date</string>
    <string name="str_select_source">Please select source</string>
    <string name="str_select_destination">Please select destination</string>
    <string name="str_select_vechile">Please select vehicle</string>

    <string name="str_order_complete">Your order has been submitted, a driver will be assigned to you shortly</string>

    <string name="str_terms_part_one">I agree with the\t</string>
    <string name="str_terms_part_two">Terms and Conditions\t</string>
    <string name="str_terms_part_three">And\t</string>
    <string name="str_terms_part_four">Privacy Policy</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>


    /****************************************************************Drivers String.************\
    <string name="login_as_user">Start as user</string>
    <string name="login_as_driver">Start as messenger</string>
    <string name="in_service">In Service</string>
    <string name="out_service">Out of Service</string>
    <string name="str_collect">Collect</string>
    <string name="str_deliver">Deliver</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="title_activity_upcoming">UpcomingActivity</string>
    <string name="geo_coding_key">AIzaSyDCRfXUt0ipr-UfxIPhHGO5osj-bncoJWk</string>
    <string name="title_activity_accept_order">AcceptOrderActivity</string>
    <string name="title_activity_completed_records">CompletedRecords</string>
    <string name="str_source">Source</string>
    <string name="str_finished">Finished</string>
    <string name="str_dest">Destination</string>
    <string name="str_notify_text">Have you received request?</string>
    <string name="str_add_comment">Add Comment</string>
    <string name="str_try_again">Try Again.</string>
    <string name="str_no_order">You don\'t have order right now</string>
    <string name="title_activity_test">Map</string>


</resources>
