<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order_24dp"
            android:title="@string/str_menu_order" />


        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_menu_gallery"

            android:title="@string/str_menu_payment_method" />




        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/str_menu_record" />


        <item
            android:id="@+id/nav_scheduled"
            android:icon="@drawable/ic_schedule_24dp"
            android:title="@string/str_menu_schedule" />



            <item
                android:id="@+id/nav_fav"
                android:icon="@drawable/ic_favorite_24dp"
                android:title="@string/str_menu_fav" />



           <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/str_menu_logout" />



    <item
        android:id="@+id/footer_spacer_1"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="200"
        android:title="" />
    <item
        android:id="@+id/footer_spacer_2"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="200"
        android:title="" />

    <item
        android:id="@+id/footer_spacer_3"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="200"
        android:title="" />
        </menu>



