<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <EditText
        android:layout_width="match_parent"
        android:id="@+id/flUsername"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:hint="@string/hint_user"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_centerInParent="true"
        style="@style/AppTheme.Input.Login"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/flPassword"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_below="@+id/flUsername"
        style="@style/AppTheme.Input.Login"/>

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_20"
          android:layout_marginLeft="@dimen/dp_40"
          android:text="@string/str_login"
          android:layout_marginRight="@dimen/dp_40"
          android:layout_below="@+id/flPassword"
          style="@style/AppTheme.Button"/>

</RelativeLayout>