<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_view_divider">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_20"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/str_add_comments"/>

    <EditText
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_13"
        android:layout_marginRight="@dimen/dp_13"
        android:id="@+id/text_add_comment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:focusable="true"
        android:maxLength="1000"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:padding="@dimen/dp_4"
        android:textSize="@dimen/dp_13"
        android:background="@drawable/add_comment_bg">
    </EditText>
    
    <RelativeLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancel"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dp_15"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/color_view_divider"
            android:background="@drawable/bg_reservation_btn"
            android:text="@string/str_cancel"
            android:layout_width="110dp"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnSubmitComment"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dp_15"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/color_view_divider"
            android:background="@drawable/bg_reservation_btn"
            android:text="@string/str_submit"
            android:layout_width="110dp"
            android:layout_height="30dp" />
        
    </RelativeLayout>
    </LinearLayout>
</ScrollView>