<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="2dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/civ_border"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/frEdtname"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:hint="@string/hint_user"
                android:layout_marginRight="@dimen/dp_40"
                 android:layout_marginTop="@dimen/dp_20"
                style="@style/AppTheme.Input"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/frEdtPassword"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:hint="@string/hint_user"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_10"
                style="@style/AppTheme.Input"/>


            <EditText
                android:layout_width="match_parent"
                android:id="@+id/frEdtEmail"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:hint="@string/hint_user"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_10"
                style="@style/AppTheme.Input"/>


            <EditText
                android:layout_width="match_parent"
                android:id="@+id/frEdtPhone"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:hint="@string/hint_user"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_10"
                style="@style/AppTheme.Input"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_40"
                android:text="@string/str_create_account"
                android:layout_marginRight="@dimen/dp_40"
                style="@style/AppTheme.Button"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_signup_with"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:textSize="@dimen/sp_16"/>


            </LinearLayout>



        </RelativeLayout>




</ScrollView>