<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"

    android:background="@drawable/bg_app"
    tools:context="com.hoffmans.rush.ui.fragments.UpdateAccountFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_toLeftOf="@+id/imgRushLogo"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"/>
    <ImageView
        android:id="@+id/imgRushLogo"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        android:src="@drawable/logo_signup"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical"
        android:padding="@dimen/dp_5"
        >


        <EditText


            android:id="@+id/fuEdtEmail"
            android:drawableLeft="@drawable/ic_email"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:hint="@string/str_email"
            style="@style/AppTheme.Input"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_edittext_shape">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_2"
                android:src="@drawable/ic_phone"/>


            <include
                android:id="@+id/viewCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                layout="@layout/layout_country_codes"/>
           <!-- <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fuEdtCC"
                android:textSize="@dimen/sp_16"
                android:layout_marginLeft="2dp"
                android:drawablePadding="@dimen/dp_3"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold|italic"
                android:maxLength="3"
                android:paddingRight="@dimen/dp_2"
                android:paddingBottom="@dimen/dp_3"
                android:paddingLeft="@dimen/dp_6"
                android:paddingTop="@dimen/dp_3"
                android:text="+1"
                android:inputType="phone|textNoSuggestions"
                android:background="@android:color/transparent"/>-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fuEdtPhone"
                android:textSize="@dimen/sp_16"
                android:drawablePadding="@dimen/dp_3"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold|italic"
                android:paddingRight="@dimen/dp_2"

                android:paddingBottom="@dimen/dp_3"
                android:paddingLeft="@dimen/dp_2"
                android:paddingTop="@dimen/dp_3"
                android:inputType="phone|textNoSuggestions"
                android:hint="@string/str_phone"
                android:background="@android:color/transparent"

                ></EditText>
        </LinearLayout>


        <!-- <EditText

            android:id="@+id/fuEdtPhone"
            android:layout_marginTop="@dimen/dp_10"
            android:drawableLeft="@drawable/ic_phone"
            android:inputType="phone|textNoSuggestions"
            android:hint="@string/str_phone"
            style="@style/AppTheme.Input"></EditText>-->

            <include
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_height="wrap_content"
                layout="@layout/custom_spinner"/>

        <Button
            android:id="@+id/fuSaveDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/str_save"
            style="@style/AppTheme.Button"/>
    </LinearLayout>










</RelativeLayout>
